Copy input format in case output format's color space is different

--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "homepage": "https://github.com/devongovett/pixel-stream",
   "devDependencies": {
     "mocha": "^2.0.1"
+  },
+  "dependencies": {
+    "shallow-copy": "0.0.1"
   }
 }
